--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "opensky",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "npx ts-node src/index.ts",
-        "db-push": "npx prisma db push",
-        "db-studio": "npx prisma studio"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@prisma/client": "^5.13.0",
-        "express": "^4.19.2",
-        "prisma": "^5.13.0",
-        "typescript": "^5.4.5"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.21"
-    }
+  "name": "opensky",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "npx ts-node src/index.ts",
+    "db:push": "npx prisma db push",
+    "db:studio": "npx prisma studio",
+    "db:format": "npx prisma format"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "express": "^4.19.2",
+    "prisma": "^5.13.0",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  }
 }
