--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx ts-node src/index.ts",
+    "dev": "npx nodemon src/index.ts",
     "db:push": "npx prisma db push",
     "db:studio": "npx prisma studio",
     "db:format": "npx prisma format"
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
+    "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
     "typescript": "^5.4.5"
   },
