--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "dev": "npx nodemon src/index.ts",
     "db:push": "npx prisma db push",
     "db:studio": "npx prisma studio",
-    "db:format": "npx prisma format"
+    "db:format": "npx prisma format",
+    "test": "npx mocha 'src/tests/**/*.ts' --recursive --reporter mocha-junit-reporter --timeout 60000 --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.6",
+    "chai": "^5.1.1",
+    "chai-http": "^4.4.0",
     "express": "^4.19.2",
+    "mocha": "^10.4.0",
+    "mocha-junit-reporter": "^2.2.1",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
     "typescript": "^5.4.5"
