--- a/package.json
+++ b/package.json
@@ -8,21 +8,17 @@
     "db:push": "npx prisma db push",
     "db:studio": "npx prisma studio",
     "db:format": "npx prisma format",
-    "test:unit": "jest --verbose --ci"
+    "test": "jest --verbose --ci"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "@types/chai": "^4.3.16",
     "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
-    "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
     "axios": "^1.6.8",
-    "chai": "^5.1.1",
-    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "identity-obj-proxy": "^3.0.0",
@@ -30,8 +26,6 @@
     "jest-config": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "mocha": "^10.4.0",
-    "mocha-junit-reporter": "^2.2.1",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
     "ts-jest": "^29.1.2",
